# xadmin-annotation

./: .gitignore  README.md  pyproject.toml  setup.cfg
xadmin_annotation/: __init__.py  adminx.py  apps.py  models.py  register.py  settings.py  xplugin.py
xadmin_annotation/forms/: fields.py
xadmin_annotation/locale/pt_BR/LC_MESSAGES/: django.mo  django.po  djangojs.mo  djangojs.po
xadmin_annotation/static/annotation/adminx/js/: annotation_form_widget.js
xadmin_annotation/templates/annotation/adminx/: annotation_form_field.html  annotation_form_widget.html
